--- a/ios/vendorApp/Info.plist
+++ b/ios/vendorApp/Info.plist
@@ -71,6 +71,8 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>Ubuntu-Light.ttf</string>
+		<string>Comfortaa-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
