--- a/ios/vendorApp/Info.plist
+++ b/ios/vendorApp/Info.plist
@@ -73,6 +73,7 @@
 		<string>Zocial.ttf</string>
 		<string>Ubuntu-Light.ttf</string>
 		<string>Comfortaa-Regular.ttf</string>
+		<string>Raleway-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
