--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-vector-icons": "^7.1.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "@babel/core": "7.12.10",
